--- a/src/components/styles/timer.css
+++ b/src/components/styles/timer.css
@@ -10,9 +10,9 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -120%);
     font-size: 24px;
     font-weight: bold;
-    color: #333;
+    color: #fff;
   }
   
