--- a/src/pages/Styles/auth.css
+++ b/src/pages/Styles/auth.css
@@ -2,6 +2,7 @@
 
 .auth-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -76,6 +77,33 @@
   font-weight: bold;
   cursor: pointer;
   font-size: 1rem;
+}
+
+.quote-container {
+  background-color: #f4f4f9;
+  border-radius: 8px;
+  padding: 20px;
+  margin-bottom: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.quote {
+  font-size: 24px;
+  font-style: italic;
+  color: #555;
+  margin-bottom: 10px;
+}
+
+.author {
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+  margin-top: 0;
+}
+
+.quote-container p {
+  margin: 0;
 }
 
 .auth-toggle button:hover {
